tests/toy/neg/000964_mutation.toylang
program a = { if a then do sleep; } .
